[metadata]
name = aiopipe
version = 0.2.0
description = Multiprocess communication pipe for asyncio
long_description = file: Readme.md
long_description_content_type = text/markdown
author = Mick Koch
author_email = mick@kochm.co
license = MIT
url = https://github.com/kchmck/aiopipe
project_urls =
    Documentation = http://kchmck.github.io/pdoc/aiopipe/
keywords = async, asyncio, pipe, os.pipe
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = ~=3.5

[options.extras_require]
dev =
    tox~=3.9
