[metadata]
name = aiopipe
version = 0.2.0
description = Multiprocess communication pipes for asyncio
long_description = file: Readme.md
long_description_content_type = text/markdown
author = Mick Koch
author_email = mick@kochm.co
license = MIT
license_file = LICENSE.txt
url = https://github.com/kchmck/aiopipe
project_urls =
    Documentation = https://kchmck.github.io/aiopipe/aiopipe/
keywords = async, asyncio, pipe, os.pipe, duplex
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = ~=3.7

[options.extras_require]
dev =
    tox~=3.9
